# NEXUS-AI-Forge

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs
src/ai/: claude.rs  context.rs  mod.rs  ollama.rs  providers.rs  proxy_client.rs  router.rs
src/cli/: ask.rs  chat.rs  commit.rs  convert.rs  diff.rs  doc.rs  explain.rs  fix.rs  generate.rs  index.rs  info.rs  init.rs  mod.rs  optimize.rs  refactor.rs  review.rs  search.rs  test.rs  update.rs
src/core/: cache.rs  mod.rs  parser.rs
src/index/: mod.rs  semantic.rs
src/ui/: form.rs  mod.rs  theme.rs
