[package]
name = "nexus-forge"
version = "0.5.0"
edition = "2021"
authors = ["Mustafa Saraç <mustafa@mustafasarac.com>"]
description = "The ultimate AI-augmented developer tool"
license = "MIT"
repository = "https://github.com/mrsarac/NEXUS-AI-Forge"
keywords = ["ai", "developer-tools", "coding-assistant", "rust", "cli"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# TUI (optional)
ratatui = { version = "0.25", optional = true }
crossterm = { version = "0.27", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client (for AI APIs)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Code parsing
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Async channels
async-channel = "2.1"

# File watching
notify = "6.1"

# Git integration
git2 = "0.18"

# Fuzzy search
nucleo = "0.2"

# Directory traversal
walkdir = "2.4"
ignore = "0.4"

# Progress bars and spinners
indicatif = "0.17"
console = "0.15"

# Interactive prompts (Claude Code style forms)
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# Configuration
directories = "5.0"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Time
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.9"

[features]
default = []
tui = ["ratatui", "crossterm"]

[[bin]]
name = "nexus"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
